# drf-tracker-project

./: .dockerignore  .env.sample  .flake8  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
.github/workflows/: main.yml
config/: settings.py  urls.py
coverage/: coverage-report.txt
dev/: .env.dev  init.sql
habit/: admin.py  models.py  paginators.py  permissions.py  serializers.py  services.py  setup.py  tasks.py  tests.py  urls.py  validators.py  views.py
habit/management/commands/: bot.py
habit/migrations/: 0001_initial.py  0002_alter_habit_periodicity_alter_habit_user.py  0003_alter_habit_user.py
nginx/: nginx.conf
postgres/: Dockerfile  init.sql
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  validators.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
