[tool.poetry]
name = "django-tracker-project"
version = "0.1.0"
description = ""
authors = ["egor <ega.nik5674@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.2"
djangorestframework = "^3.15.1"
psycopg2-binary = "^2.9.9"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.0.0"
redis = "^5.0.4"
celery = "^5.4.0"
python-dotenv = "^1.0.1"
djangorestframework-simplejwt = "^5.3.1"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^2024.2"
drf-yasg = "^1.21.7"
setuptools = "^69.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
